[workspace]
resolver = "3"
members = [
    "crates/demoapp-macos-bindings",
    "crates/demoapp-cef",
    "crates/demoapp-bundler",
    "crates/demoapp-helper",
    "crates/demoapp-winit",
    "crates/demoapp-ipc",
    "crates/demoapp-gpui",
]

[workspace.dependencies]
winit = "0.30.12"
cef = "143.6.0"
ipc-channel = "0.20.2"
serde = "1.0"
anyhow = "1.0"
plist = "1.8"
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", default-features = false }
objc2-core-foundation = { version = "0.3.2", default-features = false }
objc2-app-kit = { version = "0.3.2", default-features = false }
objc2-quartz-core = { version = "0.3.2", default-features = false }
gpui = "0.2.2"
raw-window-handle = "0.6.2"
