[package]
name = "cefowldemo-owl"
edition = "2024"

[dependencies]
cef.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
cefowldemo-macos-bindings.path = "../cefowldemo-macos-bindings"
objc2.workspace = true
objc2-foundation = { workspace = true, features = ["NSEnumerator"] }
objc2-quartz-core = { workspace = true, features = ["CALayer"] }

[target.'cfg(target_os = "macos")'.dependencies.objc2-app-kit]
workspace = true
features = [
    "NSApplication",
    "NSResponder",
    "NSView",
    "objc2-quartz-core"
]
