[package]
name = "demoapp-cef"
publish = false
edition = "2024"

[dependencies]
demoapp-ipc.path = "../demoapp-ipc"
demoapp-macos-bindings.path = "../demoapp-macos-bindings"
cef.workspace = true
objc2.workspace = true
objc2-foundation = { workspace = true, features = ["NSEnumerator"] }
objc2-quartz-core = { workspace = true, features = ["CALayer"] }

[dependencies.objc2-app-kit]
workspace = true
features = [
    "NSApplication",
    "NSResponder",
    "NSView",
    "objc2-quartz-core"
]
